--- a/templates/air/availability.html.twig
+++ b/templates/air/availability.html.twig
@@ -3,6 +3,11 @@
 {% block title %}GAC Travel{% endblock %}
 
 {% block body %}
+
+{% set ShopResID = content.ShoppingResponseID %}
+{% set OffGroup = content.OffersGroup %}
+{% set DList = content.DataLists %}
+
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -10,7 +15,7 @@
 
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">1 oferta disponible</h1>
+        <h1 class="display-4">{{ DList.FlightList.Flight|length }} oferta disponible</h1>
     </div>
 </div>
 
@@ -19,64 +24,41 @@
     <div class="card row shadow-sm mb-5">
         <div class="card-body col-10">
             <!-- Ruta. -->
+            {% for Flight in DList.FlightList.Flight %}
             <div class="row route">
                 <div class="col option">
                     <ul class="list-group">
                         <li class="list-group-item fs-5 option">
-                            <strong>ALC</strong> - <strong>LON</strong>
-                            <span class="badge bg-success">DIRECTO</span>
-                            <i class="bi bi-clock"></i> 120 minutos
+                            <strong>ALC</strong> - <strong>BCN</strong>
+                          {% if DList.FlightSegmentList.FlightSegment|length == '2' %}
+                                <span class="badge bg-success">DIRECTO</span>
+                            {% else %}
+                                <span class="badge bg-warning">1 ESCALA</span>
+                            {% endif %}
+                            <i class="bi bi-clock"></i> {{ Flight.Journey.Time }}
                         </li>
                         <li class="list-group-item">
                             <!-- Segmento. -->
                             <ul class="list-inline">
-                                <li class="list-inline-item col-3">ALC 15JUN 15:00</li>
-                                <li class="list-inline-item col-3">LHR 15JUN 17:00</li>
-                                <li class="list-inline-item col-2"><i class="bi bi-clock"></i> 120 minutos</li>
-                                <li class="list-inline-item col-2">IB4545</li>
+                                {% for FSegment in DList.FlightSegmentList.FlightSegment %}
+                                <li class="list-inline-item col-3">{{ FSegment.Departure.AirportCode }} {{ FSegment.Departure.Date }} {{ FSegment.Departure.Time }}</li>
+                                <li class="list-inline-item col-3">{{ FSegment.Arrival.AirportCode }} {{ FSegment.Arrival.Date }} {{ FSegment.Arrival.Time }}</li>
+                                <li class="list-inline-item col-2"><i class="bi bi-clock"></i> {{ FSegment.FlightDetail.FlightDuration.Value }}</li>
+                                <li class="list-inline-item col-2">{{ FSegment.MarketingCarrier.AirlineID }}{{ FSegment.MarketingCarrier.FlightNumber }}</li>
+                                {% endfor %}
                             </ul>
                             <!-- /Segmento. -->
                         </li>
                     </ul>
                 </div>
             </div>
-            <!-- /Ruta. -->
-            <!-- Ruta. -->
-            <div class="row route">
-                <div class="col option">
-                    <ul class="list-group">
-                        <li class="list-group-item fs-5 option">
-                            <strong>LON</strong> - <strong>ALC</strong>
-                            <span class="badge bg-warning">1 ESCALA</span>
-                            <i class="bi bi-clock"></i> 180 minutos
-                        </li>
-                        <li class="list-group-item">
-                            <!-- Segmento. -->
-                            <ul class="list-inline">
-                                <li class="list-inline-item col-3">LHR 20JUN 15:00</li>
-                                <li class="list-inline-item col-3">MAD 20JUN 16:00</li>
-                                <li class="list-inline-item col-2"><i class="bi bi-clock"></i> 60 minutos</li>
-                                <li class="list-inline-item col-2">IB15</li>
-                            </ul>
-                            <!-- /Segmento. -->
-                            <!-- Segmento. -->
-                            <ul class="list-inline">
-                                <li class="list-inline-item col-3">MAD 20JUN 17:00</li>
-                                <li class="list-inline-item col-3">ALC 20JUN 18:00</li>
-                                <li class="list-inline-item col-2"><i class="bi bi-clock"></i> 60 minutos</li>
-                                <li class="list-inline-item col-2">IB16</li>
-                            </ul>
-                            <!-- /Segmento. -->
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            {% endfor %}
             <!-- /Ruta. -->
         </div>
         <!-- Total tarifas y tiempo límite emisión. -->
         <div class="card-body col-2 text-center">
-            <h1 class="card-title pricing-card-title">597,00EUR</h1>
-            <span class="mt-2 d-block"><i class="bi bi-clock"></i> TKTL 15JUN 23:59</span>
+            <h1 class="card-title pricing-card-title">{{ OffGroup.AirlineOffers.Offer.TotalPrice.SimpleCurrencyPrice }} EUR</h1>
+            <span class="mt-2 d-block"><i class="bi bi-clock"></i>{{ OffGroup.AirlineOffers.Offer.PaymentTimeLimitDateTime }}</span>
         </div>
         <!-- /Total tarifas y tiempo límite emisión. -->
         <!-- Desglose tarifa por PAX. -->
@@ -87,18 +69,23 @@
                         <th scope="col">PTC</th>
                         <th scope="col" class="text-center">Base</th>
                         <th scope="col" class="text-center">Taxes</th>
-                        <th scope="col" class="text-center">ALC-LHR</th>
-                        <th scope="col" class="text-center">LHR-MAD</th>
-                        <th scope="col" class="text-center">MAD-ALC</th>
+                        <th scope="col" class="text-center">ALC-BCN</th>
+                        <th scope="col" class="text-center">BCN-LGW</th>
+                        <th scope="col" class="text-center">LGW-BCN</th>
+                        <th scope="col" class="text-center">BCN-ALC</th>
                     </tr>
                 </thead>
                 <tbody class="pax-fare-data">
                     <!-- PAX. -->
+                    {% for DL in DList.PassengerList.Passenger %}
                     <tr>
-                        <td>ADT</td>
-                        <td class="text-center">100,00EUR</td>
-                        <td class="text-center">99,00EUR</td>
+                        <td>{{ DL.PTC }}</td>
+                        {% for Price in OffGroup.AirlineOffers.Offer.OfferItem.FareDetail.Price %}
+                        <td class="text-center">{{ Price.BaseAmount }}EUR</td>
+                        <td class="text-center">{{ Price.Taxes.Total }}EUR</td>
+                        {% endfor %}
                         <!-- Equipaje y código clase por segmento.-->
+{#                        {% for  %}#}
                         <td scope="row" class="text-center">
                             <span class="badge bg-success">1PC</span>
                             <small><mark>Y</mark></small>
@@ -111,50 +98,13 @@
                             <span class="badge bg-success">1PC</span>
                             <small><mark>Y</mark></small>
                         </td>
-                        <!-- /Equipaje y código clase por segmento.-->
-                    </tr>
-                    <!-- /PAX. -->
-                    <!-- PAX. -->
-                    <tr>
-                        <td>CHD</td>
-                        <td class="text-center">100,00EUR</td>
-                        <td class="text-center">99,00EUR</td>
-                        <!-- Equipaje y código clase por segmento.-->
-                        <td scope="row" class="text-center">
-                            <span class="badge bg-success">1PC</span>
-                            <small><mark>Y</mark></small>
-                        </td>
-                        <td scope="row" class="text-center">
-                            <span class="badge bg-danger">0PC</span>
-                            <small><mark>X</mark></small>
-                        </td>
                         <td scope="row" class="text-center">
                             <span class="badge bg-success">1PC</span>
                             <small><mark>Y</mark></small>
                         </td>
                         <!-- /Equipaje y código clase por segmento.-->
                     </tr>
-                    <!-- /PAX. -->
-                    <!-- PAX. -->
-                    <tr>
-                        <td>INF</td>
-                        <td class="text-center">100,00EUR</td>
-                        <td class="text-center">99,00EUR</td>
-                        <!-- Equipaje y código clase por segmento.-->
-                        <td scope="row" class="text-center">
-                            <span class="badge bg-success">1PC</span>
-                            <small><mark>Y</mark></small>
-                        </td>
-                        <td scope="row" class="text-center">
-                            <span class="badge bg-danger">0PC</span>
-                            <small><mark>X</mark></small>
-                        </td>
-                        <td scope="row" class="text-center">
-                            <span class="badge bg-success">1PC</span>
-                            <small><mark>Y</mark></small>
-                        </td>
-                        <!-- /Equipaje y código clase por segmento.-->
-                    </tr>
+                    {% endfor %}
                     <!-- /PAX. -->
                 </tbody>
             </table>
