--- a/templates/air/availability.html.twig
+++ b/templates/air/availability.html.twig
@@ -15,7 +15,7 @@
 
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">{{ DList.FlightList.Flight|length }} oferta disponible</h1>
+        <h1 class="display-4">1 oferta disponible</h1>
     </div>
 </div>
 
